--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>oversize t shirt</h1>
-<a href="C:\Users\RAGULK\Pictures\WhatsApp Image 2025-07-03 at 10.38.00 AM.jpeg">click me</a>
+<a href="pk.html">click me</a>
 </body>
 </html>
