--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
 <h1>oversize t shirt</h1>
 <img src="rgupk.jpeg">
-  <img src=".jpeg">
+<img src="WhatsApp Image 2025-07-03 at 10.38.00 AM.jpeg">
 </body>
 </html>
