--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>pk mens wear</title>
 </head>
 <body>
-<h1>oversize t shirt</h1><br>
-<img src="rgupk.jpeg">
+<h1>oversize t shirt</h1>
+<img src="rgupk.jpeg"><br>
 <img src="WhatsApp Image 2025-07-03 at 10.38.00 AM.jpeg">
 </body>
 </html>
