--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ f<html>
 </head>
 <body>
 <h1>oversize t shirt</h1>
-<img src="rgupk.jpegh"><br>
+<img src="rgupk.jpeg height=500 width=500"><br>
 <img src="WhatsApp Image 2025-07-03 at 10.38.00 AM.jpeg"><br>
 </body>
 </html>
