--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-f<html>
+<html>
 <head>
 <title>pk mens wear</title>
 </head>
 <body>
 <h1>oversize t shirt</h1>
-<img src="rgupk.jpeg height=500 width=500"><br>
+<img src="rgupk.jpeg "><br>
 <img src="WhatsApp Image 2025-07-03 at 10.38.00 AM.jpeg"><br>
 </body>
 </html>
