--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <body>
 <h1>oversize t shirt</h1>
 <img src="rgupk.jpeg ">
+<video width="640" height="360" controls>
+        <source src="dinesh.mp4" type="video/mp4">
 <br>
   <br>
 <img src="WhatsApp Image 2025-07-03 at 10.38.00 AM.jpeg"><br>
